UI/1.output
  File "C:/SSD/Uni/Thesis/Source/UI/1.py", line 29
    1_support.init(root, top)
     ^
SyntaxError: invalid decimal literal
